--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "chat",
   "version": "1.0.0",
-  "description": "Chat Application by KK",
+  "description": "Chat Application for a Happy Home",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mymachine8/HappyHome.git"
+  },
   "dependencies": {
     "express": "^4.13.3",
     "socket.io": "^1.3.6"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "Kommanapalli Krishna Chaitanya",
   "license": "ISC"
 }
